Change bot status text in index.html
Updated bot status text from 'Bot Online' to 'Anonymous Online'.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- BOT STATUS -->
     <div class="bot-status">
       <span id="statusDot" class="online"></span>
-      <span id="statusText">Bot Online</span>
+      <span id="statusText">Anonymous Online</span>
     </div>
 
     <div class="profile">
@@ -60,4 +60,5 @@
 
 <script src="script.js"></script>
 </body>
+
 </html>
